# agentscroll

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ci-pending/: README.md
docs/: archive-plan.md
launchers/: agentscroll.bat  agentscroll.command  agentscroll.sh
scripts/: demo_data.py  screenshots.py
src/agentscroll/: __init__.py  cli.py  export.py  fts.py  launcher_install.py  minimd.py  models.py  serialize.py  serverconfig.py  store.py  termrender.py  webopen.py
src/agentscroll/launchers/: agentscroll.bat  agentscroll.command  agentscroll.desktop  agentscroll.sh
src/agentscroll/sources/: aider.py  base.py  claudecode.py  codex.py  opencode.py  registry.py
src/agentscroll/web/: __init__.py  app.py
src/agentscroll/web/static/: app.js  index.html  style.css
src/scrollback/: __init__.py  cli.py  clipboard.py  export.py  fts.py  highlight.py  katexbundle.py  launcher_install.py  mathspan.py  minimd.py  models.py  serialize.py  serverconfig.py  store.py  termrender.py  webopen.py
src/scrollback/assets/: icon.icns
src/scrollback/launchers/: scrollback.bat  scrollback.command  scrollback.desktop  scrollback.sh
src/scrollback/sources/: __init__.py  aider.py  base.py  claudecode.py  codex.py  opencode.py  registry.py
src/scrollback/web/: __init__.py  app.py
src/scrollback/web/static/: app.js  index.html  style.css
tests/: test_aider.py  test_claude_paging.py  test_claude_subagents.py  test_cli_helpers.py  test_codex.py  test_export.py  test_fts.py  test_highlight.py  test_launcher_install.py  test_minimd.py  test_models.py  test_serverconfig.py  test_sources_live.py  test_stats_resume.py  test_store_filters.py  test_usage.py  test_web_api.py  test_webopen.py
