[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentscroll"
version = "0.1.0"
description = "Navigate, search, copy, and export your AI coding-agent sessions (opencode, Claude Code, ...) from one local, read-only tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ahmed Attia" }]
keywords = [
    "opencode",
    "claude-code",
    "ai-agent",
    "session-history",
    "transcript",
    "cli",
    "local-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
# Zero required runtime dependencies: the CLI core uses only the stdlib
# (sqlite3, json, argparse). Optional extras pull in the web app + niceties.
dependencies = []

# The bare package stays dependency-free so `pip install agentscroll` works
# anywhere (incl. headless/Linux servers). The web app pulls its own deps.
# pywebview is included with [web] so the native app window works out of the
# box; on Linux it additionally needs a system GTK/Qt WebKit backend, but its
# absence only disables the native window (the browser fallback still works).
[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1", "pywebview>=5.0"]
app = ["agentscroll[web]"]
rich = ["rich>=13.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "rich>=13.0", "pywebview>=5.0"]

[project.scripts]
agentscroll = "agentscroll.cli:main"
# Convenience entry points installed on PATH by pip, so users don't have to
# type the subcommand. `agentscroll-web` == `agentscroll web`, etc.
agentscroll-web = "agentscroll.cli:main_web"
agentscroll-app = "agentscroll.cli:main_app"

[project.urls]
Homepage = "https://github.com/attia/agentscroll"
Repository = "https://github.com/attia/agentscroll"
Issues = "https://github.com/attia/agentscroll/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentscroll"]
# Non-Python package data (web assets + bundled launchers) shipped in the wheel.
artifacts = [
    "src/agentscroll/web/static/**",
    "src/agentscroll/launchers/**",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
