[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentscroll"
dynamic = ["version"]
description = "Navigate, search, copy, and export your AI coding-agent sessions (opencode, Claude Code, ...) from one local, read-only tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ahmed Attia" }]
keywords = [
    "opencode",
    "claude-code",
    "ai-agent",
    "session-history",
    "transcript",
    "cli",
    "local-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
# Zero required runtime dependencies: the CLI core uses only the stdlib
# (sqlite3, json, argparse). Optional extras pull in the web app + niceties.
dependencies = []

# The bare package stays dependency-free so `pip install agentscroll` works
# anywhere (incl. headless/Linux servers). The web app pulls its own deps.
# pywebview is included with [web] so the native app window works out of the
# box; on Linux it additionally needs a system GTK/Qt WebKit backend, but its
# absence only disables the native window (the browser fallback still works).
[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1", "pywebview>=5.0"]
app = ["agentscroll[web]"]
rich = ["rich>=13.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "rich>=13.0", "pywebview>=5.0"]

[project.scripts]
agentscroll = "agentscroll.cli:main"
# Convenience entry points installed on PATH by pip, so users don't have to
# type the subcommand. `agentscroll-web` == `agentscroll web`, etc.
agentscroll-web = "agentscroll.cli:main_web"
agentscroll-app = "agentscroll.cli:main_app"

[project.urls]
Homepage = "https://github.com/attia/agentscroll"
Repository = "https://github.com/attia/agentscroll"
Issues = "https://github.com/attia/agentscroll/issues"

[tool.hatch.version]
path = "src/agentscroll/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentscroll"]
# Non-Python package data (web assets + bundled launchers) shipped in the wheel.
artifacts = [
    "src/agentscroll/web/static/**",
    "src/agentscroll/launchers/**",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
