[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrollback"
dynamic = ["version"]
description = "Navigate, search, copy, and export your AI coding-agent sessions (opencode, Claude Code, ...) from one local, read-only tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ahmed Attia" }]
keywords = [
    "opencode",
    "claude-code",
    "ai-agent",
    "session-history",
    "transcript",
    "cli",
    "local-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
# Zero required runtime dependencies: the CLI core uses only the stdlib
# (sqlite3, json, argparse). Optional extras pull in the web app + niceties.
dependencies = []

# The bare package stays dependency-free so `pip install scrollback` works
# anywhere (incl. headless/Linux servers). The web app pulls its own deps.
# pywebview is included with [web] so the native app window works out of the
# box; on Linux it additionally needs a system GTK/Qt WebKit backend, but its
# absence only disables the native window (the browser fallback still works).
[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1", "pywebview>=5.0"]
app = ["scrollback[web]"]
rich = ["rich>=13.0"]
# Everything an end user might want at runtime: the web app + native window
# (web) and coloured terminal output (rich). Deliberately excludes `dev`,
# which is test/lint tooling, not a runtime feature.
all = ["scrollback[web,rich]"]
# dev is self-sufficient for the full test suite: the web-API tests need
# fastapi/uvicorn + an HTTP client for Starlette's TestClient (httpx), and
# the colour-output tests need rich. pywebview is NOT included here -- it
# needs a system GUI backend that CI runners lack, and no test imports it.
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]
# Tooling to regenerate the README screenshots (maintainers only). Needs a
# one-time `playwright install chromium` for the headless browser; neither
# this extra nor the browser binary is required to run scrollback.
screenshots = ["playwright>=1.40", "rich>=13.0", "scrollback[web]"]

[project.scripts]
scrollback = "scrollback.cli:main"
# Convenience entry points installed on PATH by pip, so users don't have to
# type the subcommand. `scrollback-web` == `scrollback web`, etc.
scrollback-web = "scrollback.cli:main_web"
scrollback-app = "scrollback.cli:main_app"

[project.urls]
Homepage = "https://github.com/a-attia/scrollback"
Repository = "https://github.com/a-attia/scrollback"
Issues = "https://github.com/a-attia/scrollback/issues"

[tool.hatch.version]
path = "src/scrollback/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/scrollback"]
# Non-Python package data (web assets + launchers + app icon) shipped in the wheel.
artifacts = [
    "src/scrollback/web/static/**",
    "src/scrollback/launchers/**",
    "src/scrollback/assets/**",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
